# ROCKO-env

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  root_start.sh
examples/example_hardware/: hardware_template.cpp  hardware_template.hpp  hardware_template.py  py_hardware_template.cpp
joystick/: computer_joystick.py
rocko_env/: CMakeLists.txt  package.xml  rocko_env.xml  rocko_env_controllers.xml  rocko_env_hardware.xml  setup.cfg
rocko_env/rocko_env/bringup/config/: rocko_controllers.yaml  rocko_tank_mode_controllers.yaml
rocko_env/rocko_env/bringup/launch/: rocko.launch.py  rocko_tank_mode.launch.py
rocko_env/rocko_env/controllers/add_feedforward/: AddFeedforwardController.cpp  add_feedforward_controller_parameters.yaml
rocko_env/rocko_env/controllers/add_feedforward/include/rocko_env/: AddFeedforwardController.hpp
rocko_env/rocko_env/controllers/balancing/: BalancingController.cpp  BalancingController.py
rocko_env/rocko_env/controllers/balancing/include/rocko_env/: BalancingController.hpp
rocko_env/rocko_env/controllers/diffdrive/: DiffDriveController.py
rocko_env/rocko_env/controllers/joystick/: Joystick.py
rocko_env/rocko_env/controllers/ratelimiting/: RateLimiter.py  RateLimitingController.py
rocko_env/rocko_env/controllers/utils/: RateLimiter.py
rocko_env/rocko_env/description/ros2_control/: rocko.ros2_control.xacro
rocko_env/rocko_env/description/urdf/: rocko.materials.xacro  rocko_description.urdf.xacro  rocko_tank_mode.urdf.xacro
rocko_env/rocko_env/hardware/motors/: Motor12VoltQuadEncoder.cpp
rocko_env/rocko_env/hardware/motors/include/rocko_env/: Motor12VoltQuadEncoder.hpp  wheel.hpp
rocko_env/rocko_env/hardware/sensors/as5600/: AS5600.cpp  AS5600.py
rocko_env/rocko_env/hardware/sensors/as5600/include/rocko_env/: AS5600.hpp
rocko_env/rocko_env/hardware/sensors/icm20948/: ICM20948.cpp  ICM20948.py
rocko_env/rocko_env/hardware/sensors/icm20948/calibration/: bno055.py  calibrate_accelerometer.py  calibrate_magnetometer.py  gyro_acc_data.txt  run_calibration.py
rocko_env/rocko_env/hardware/sensors/icm20948/include/rocko_env/: ICM20948.hpp
rocko_env/rocko_env/hardware/sensors/pid4991/: PID4991.cpp  PID4991.py
rocko_env/rocko_env/hardware/sensors/pid4991/include/rocko_env/: PID4991.hpp
rocko_env/rocko_env/hardware/sensors/quadEncoder/: QuadEncoder.cpp  QuadEncoder.py  QuadEncoders.py
rocko_env/rocko_env/hardware/sensors/quadEncoder/include/rocko_env/: QuadEncoder.hpp
rocko_env/rocko_env/webserver/: __init__.py  app.py
rocko_env/rocko_env/webserver/templates/: index.html  plot.html
rocko_interfaces/: CMakeLists.txt  package.xml
rocko_interfaces/srv/: As5600Data.srv  Icm20948Data.srv  Pid4991Data.srv
src/: CMakeLists.txt  package.xml  rocko_env.xml  setup.py
src/bringup/: package.xml  setup.py
src/bringup/launch/: rocko.launch.py  rocko_gui.launch.py
src/controllers/: package.xml  setup.py
src/description/: package.xml  setup.py
src/description/launch/: view_robot.launch.py
src/description/ros2_control/: rocko.ros2_control.xacro
src/description/rviz/: rocko_view.rviz
src/description/urdf/: rocko.urdf.xacro
src/hardware/: package.xml  setup.py
src/hardware/gpio-interface/: GPIOInterface.cpp  gpio_interface.py
src/hardware/gpio-interface/include/rocko_env/: GPIOInterface.hpp
src/hardware/include/rocko_env/: DriveWheel.hpp
src/hardware/motors/: DriveWheel.cpp  Motor12Volt.cpp
src/hardware/motors/include/rocko_env/: DriveWheel.hpp  Motor12Volt.hpp
src/rocko_env/bringup/launch/: rocko.launch.py
src/rocko_env/hardware/motors/: Motor12VoltQuadEncoder.cpp
